--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="detail_user_title">Detail Github User</string>
     <string name="favorite">Favorite</string>
     <string name="change_theme">Change Theme</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add_to_favorite">Add to favorite</string>
+    <string name="dark_mode">Dark Mode</string>
 </resources>
