--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,10 @@
     <string name="detail_user_title">Detail Github User</string>
     <string name="favorite">Favorite</string>
     <string name="change_theme">Change Theme</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add_to_favorite">Add to favorite</string>
     <string name="dark_mode">Dark Mode</string>
+    <string name="tab_layout">Tab layout</string>
+    <string name="favorite_user_title">Favorite User</string>
+    <string name="theme_setting_title">Theme Setting</string>
+    <string name="splash_screen">Splash Screen</string>
 </resources>
